--- a/css/main.css
+++ b/css/main.css
@@ -65,7 +65,7 @@ body{
 .button{
 	border: 1px;
 	color: white;
-	background-color: #27ae60;
+	background-color: #2ecc71;
 	padding: 15px 32px;
 	margin-right:10px;
 	text-align: center;
@@ -86,7 +86,7 @@ body{
 	padding: 10px;
 	width:90%;
 	text-align: center;
-	margin-bottom: -11%;
+	margin-bottom: -9%;
 	margin:0 auto;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	transition: 0.3s;
@@ -103,7 +103,7 @@ body{
 	left: 0;
 	bottom: 0;
 	width: 100%;
-	height: 10%;
+	height: 8%;
 	background-color: #2ecc71;
 	color: white;
 	text-align: center;
